--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dothrakhi Translator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
         <h1>Dothrakhi's Translator</h1>
     </div>
     <div class="main">
-        <textarea name="ip-box" id="ip-box" cols="30" rows="10" placeholder="Enter your message to be converted"/>
+        <textarea name="ip-box" id="ip-box" cols="30" rows="10" placeholder="Enter your message to be converted"></textarea>
+        <button class="btn">Translate</button>
+        <textarea name="ip-box" id="ip-box" cols="30" rows="10"></textarea>
     </div>
+    <footer >
+        <h1></h1>
+    </footer>
+
 </body>
 </html>
