--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     </div>
     <div class="main">
         <textarea name="ip-box" id="ip-box" cols="30" rows="10" placeholder="Enter your message to be converted"></textarea>
-        <button class="btn">Translate</button>
-        <textarea name="ip-box" id="ip-box" cols="30" rows="10"></textarea>
+        <button id="btn">Translate</button>
+        <textarea name="ip-box" id="op-box" cols="30" rows="10"></textarea>
     </div>
     <footer >
         <h2><u>About</u></h2><br><br><br>
 
         <p>The Dothraki are a fictional race of nomadic horse-mounted warriors in George R. R. Martin's A Song of Ice and Fire series. They live in the Dothraki Sea, the vast central plains of Essos, which is located east of Westeros. The Dothraki are said to be born, fight, and die in the saddle. They travel in packs called khalasars, and each pack is led by a khal. The Dothraki are dark-haired and copper-skinned.The Dothraki language has a structure similar to English grammar. It has three vowels and 23 consonants, and verbs can be conjugated into three tenses. The language also has two imperatives because the Dothraki people often issue commands. The Dothraki people are illiterate because they don't have their own writing system and don't use the writing systems of neighboring peoples.</p>
     </footer>
+
+    <script src="./app.js"></script>
 
 </body>
 </html>
